# agent-harness

./: .gitattributes  .gitignore  CLAUDE.md  README.md  agent-orchestrator.yaml
services/l1_preprocessing/: .env.example  analyst.py  auth.py  automation_jobs.py  automation_scheduler.py  automation_store.py  autonomy.py  autonomy_artifact_ingest.py  autonomy_attribution.py  autonomy_dashboard.py  autonomy_ingest.py  autonomy_jira_bug.py  autonomy_matching.py  autonomy_metrics.py  autonomy_sidecars.py  autonomy_store.py  claim_store.py  client_profile.py  completion.py  config.py  conflict_detector.py  cross_ticket_coordinator.py  dashboard_common.py  dashboard_reconciliation.py  diagnostic.py  figma_extractor.py  investigate_command.py  learning_api.py  learning_dashboard.py  live_stream.py  main.py  models.py  operator_api.py  operator_api_data.py  pipeline.py  project_setup.py  pyproject.toml  queue_worker.py  redaction.py  repo_workflow.py  (+8 more)
services/l1_preprocessing/adapters/: _url_guard.py  ado_adapter.py  attachment_utils.py  base.py  jira_adapter.py
services/l1_preprocessing/autonomy_store/: __init__.py  auto_merge.py  dashboard_state.py  defects.py  issues.py  lessons.py  pipeline_metrics.py  pr_runs.py  schema.py
services/l1_preprocessing/learning_miner/: __init__.py  _anthropic_retry.py  _subprocess.py  drafter_consistency_check.py  drafter_markdown.py  outcomes.py  pr_opener.py  retrospective_ingest.py  runner.py
services/l1_preprocessing/learning_miner/detectors/: __init__.py  _archive.py  base.py  cross_unit_object_pivot.py  form_controls_ac_gaps.py  (+4 more)
services/l1_preprocessing/operator_static/: build.json  index.html  operator.css  operator.js  tokens.css
services/l1_preprocessing/scripts/: backfill_autonomy.py
services/l1_preprocessing/tests/: conftest.py  test_adapter_equivalence.py  test_admin_endpoints.py  test_ado_adapter.py  test_analyst.py  test_automations.py  test_autonomy.py  test_autonomy_artifact_ingest.py  test_autonomy_attribution.py  test_autonomy_dashboard.py  test_autonomy_ingest.py  test_autonomy_jira_bug.py  test_autonomy_metrics.py  test_autonomy_sidecars.py  test_autonomy_store.py  test_autonomy_store_concurrent.py  test_autonomy_store_lessons.py  test_autonomy_store_v5.py  test_autonomy_store_v6.py  test_backfill_autonomy.py  test_bundle_endpoint.py  test_client_profile.py  test_config.py  test_conflict_detector.py  test_cross_ticket_coordinator.py  test_dashboard_auth.py  test_detector_cross_unit_object_pivot.py  test_detector_form_controls_ac_gaps.py  test_detector_reviewer_judge_rejection_rate.py  test_detector_simplify_no_sidecar.py  test_diagnostic.py  test_edge_trigger.py  test_ensure_client_repo.py  test_env_sanitize.py  test_figma_extractor.py  test_health.py  test_issue_matching.py  test_jira_adapter.py  test_learning_api.py  test_learning_dashboard.py  (+27 more)
services/l3_pr_review/: ado_api.py  ado_event_classifier.py  auto_merge.py  autonomy_policy.py  backlog.py  event_classifier.py  github_api.py  main.py  pyproject.toml  spawner.py
services/l3_pr_review/tests/: conftest.py  test_ado_api.py  test_ado_event_classifier.py  test_auto_merge.py  test_auto_merge_contract.py  test_autonomy_policy.py  test_backlog.py  test_event_classifier.py  test_github_api.py  test_main_ado.py  test_spawner.py  test_webhooks.py
(+308 files in other folders)
