[project]
name = "l1-preprocessing"
version = "0.1.0"
description = "Agentic Harness L1 Pre-Processing Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "anthropic>=0.52.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "redis>=5.0.0",
    "rq>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx",  # FastAPI test client
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests that call external APIs (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
# N999: directory name "l1-preprocessing" has a hyphen (not a library, just a service)

[tool.ruff.lint.per-file-ignores]
# trace_dashboard.py has inline HTML with long lines — not worth splitting
"trace_dashboard.py" = ["E501"]
ignore = ["N999"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = "."

[[tool.mypy.overrides]]
module = ["anthropic.*"]
ignore_missing_imports = true
