[project]
name = "l3-pr-review"
version = "0.1.0"
description = "Agentic Harness L3 PR Review Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx",
    "respx>=0.22.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "event_classifier", "spawner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["N999"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
mypy_path = [".", "../l1_preprocessing", ".."]

[[tool.mypy.overrides]]
module = ["structlog.*", "shared.*", "tracer", "pydantic_settings.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["config"]
# L3 mypy follows imports into L1's config.py which subclasses
# pydantic_settings.BaseSettings — an unavailable stub in L3's env.
# Suppress the "cannot subclass Any" error for this transitive import.
disable_error_code = ["misc"]
